--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -2,11 +2,10 @@ $darkteal: rgb(0, 63, 92);
 $darkteallight: rgba(0, 63, 92, 0.7);
 $darktealverylight: rgba(0, 63, 92, 0.1);
 $pink: rgb(188, 72, 115);
-$pinklight: rgba(188, 72, 115, 0.7);
+$pinklight: rgba(188, 72, 115, 0.5);
 $yellow: rgb(233, 230, 201);
 $grey: rgb(122, 122, 122);
-// $lightgrey: rgb(199, 199, 199);
-// $purple: #472b62;
+$pinkedit: rgb(190, 123, 147); // $purple: #472b62;
 // $teal: rgb(0, 135, 177);
 // $coral: rgb(253, 152, 152);
 // $orange: #fb5b5a;
