--- a/views/list.ejs
+++ b/views/list.ejs
@@ -94,8 +94,9 @@
 
     <%  }) %>
     <% } %>
+</div>
+<div class="created">
+    <p>Created by Phil Martin</p>
+</div>
 
-    <div class=" created">
-        <p>Created by Phil Martin 2020</p>
-    </div>
-    <%- include("partials/footer") -%>
+<%- include("partials/footer") -%>
