--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,7 +36,8 @@
                     <li class="list-title--new">
                         <form class="new-item" action="/new-list" method="post">
                             <div class="list-item list-item--new">
-                                <input type="text" name="newList" placeholder="New list" autocomplete="off"></input>
+                                <input class="new-list" type="text" name="newList" placeholder="New list"
+                                    autocomplete="off"></input>
                                 <button class="checkbox checkbox--add" type="submit" name="list" value="">+</button>
                             </div>
                         </form>
