--- a/public/sass/_header.scss
+++ b/public/sass/_header.scss
@@ -22,6 +22,8 @@ header {
     max-width: 30vw;
 
     @media (max-width: 825px) {
+        place-content: center;
+        min-height: 4.5em;
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
@@ -114,6 +116,9 @@ nav {
         margin: auto;
         width: 60vw;
     }
+
+    position: sticky;
+    top: 0;
 }
 
 .nav-list {
@@ -156,9 +161,4 @@ nav {
 
     }
 
-}
-
-.list-title--new input {
-    background-color: $darkteal !important;
-    color: $yellow !important;
 }
