--- a/public/sass/_header.scss
+++ b/public/sass/_header.scss
@@ -1,164 +1,167 @@
 .container {
-    position: relative;
-    display: grid;
-    grid-template-areas:
-        "header list";
-    grid-template-columns: 1fr 3fr;
+  position: relative;
+  display: grid;
+  grid-template-areas: "header list";
+  grid-template-columns: 1fr 3fr;
 
-    @media (max-width: 825px) {
-        grid-template-areas:
-            "header"
-            "list";
-        grid-template-columns: 1fr;
-    }
+  @media (max-width: 825px) {
+    grid-template-areas:
+      "header"
+      "list";
+    grid-template-columns: 1fr;
+  }
 }
 
 header {
-    padding: 2em;
-    font-weight: bold;
-    background-color: $darkteal;
-    color: $yellow;
-    grid-area: header;
-    max-width: 30vw;
+  padding: 2em;
+  font-weight: bold;
+  background-color: $darkteal;
+  color: $yellow;
+  grid-area: header;
+  max-width: 30vw;
 
-    @media (max-width: 825px) {
-        place-content: center;
-        min-height: 4.5em;
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        padding: 1em;
-        max-width: initial;
-    }
+  @media (max-width: 825px) {
+    place-content: center;
+    min-height: 4.5em;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 1em;
+    max-width: initial;
+  }
 }
 
 a {
-    color: $yellow;
-    text-decoration: none;
+  color: $yellow;
+  text-decoration: none;
 
-    &:hover {
-        color: $pink;
-    }
+  &:hover {
+    color: $pink;
+  }
 }
 
 .logo-container {
-    display: grid;
-    grid-template-areas:
-        "box1 box2"
-        "box3 box4";
-    font-family: "Open Sans", sans-serif;
-    font-size: 6em;
-    letter-spacing: 20px;
-    line-height: 1;
-    border-bottom: 3px solid $yellow;
-    max-width: 300px;
+  display: grid;
+  grid-template-areas:
+    "box1 box2"
+    "box3 box4";
+  font-family: "Open Sans", sans-serif;
+  font-size: 6em;
+  letter-spacing: 20px;
+  line-height: 1;
+  border-bottom: 3px solid $yellow;
+  max-width: 300px;
 
-    &:hover {
-        border-bottom: 3px solid $pink;
-    }
+  &:hover {
+    border-bottom: 3px solid $pink;
+  }
 
-    @media (max-width: 825px) {
-        font-size: 2rem;
-        letter-spacing: 10px;
-        margin-right: 7em;
-    }
+  @media (max-width: 825px) {
+    font-size: 2rem;
+    letter-spacing: 10px;
+    margin-right: 7em;
+  }
+
+  @media (max-width: 600px) {
+    margin-right: 0;
+  }
 }
 
 .box1 {
-    grid-area: box1;
+  grid-area: box1;
 }
 
 .box2 {
-    grid-area: box2;
+  grid-area: box2;
 }
 
 .box3 {
-    grid-area: box3;
+  grid-area: box3;
 }
 
 .box4 {
-    grid-area: box4;
+  grid-area: box4;
 
-    &::after {
-        content: "//";
-        color: $pink;
-    }
-
+  &::after {
+    content: "//";
+    color: $pink;
+  }
 }
 
 .menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-family: "Open Sans", sans-serif;
-    font-weight: 200;
-    font-size: 2rem;
-    letter-spacing: 15px;
-    cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 200;
+  font-size: 2rem;
+  letter-spacing: 15px;
+  cursor: pointer;
 
-    &::after {
-        content: "// LISTS";
-        letter-spacing: 0;
-    }
+  &::after {
+    content: "// LISTS";
+    letter-spacing: 0;
+  }
 
-    &:hover {
-        color: $pink;
-    }
+  &:hover {
+    color: $pink;
+  }
 
-    @media (min-width: 825px) {
-        display: none;
-    }
+  @media (min-width: 825px) {
+    display: none;
+  }
 }
 
 nav {
-    @media (max-width: 825px) {
-        display: none;
-        margin: auto;
-        width: 60vw;
-    }
+  @media (max-width: 825px) {
+    display: none;
+    margin: auto;
+    width: 60vw;
+  }
 
-    position: sticky;
-    top: 0;
+  position: sticky;
+  top: 0;
 }
 
 .nav-list {
-    padding: 1em 0;
-    font-size: 2rem;
-    list-style: none;
+  padding: 1em 0;
+  font-size: 2rem;
+  list-style: none;
 
-    a {
-        color: $pink;
-        text-decoration: none;
+  a {
+    color: $pink;
+    text-decoration: none;
 
-        &::before {
-            content: "//";
-            color: $yellow;
-            padding-right: 5px;
-            font-family: "Open Sans", sans-serif;
-            letter-spacing: 3px;
-        }
+    &::before {
+      content: "//";
+      color: $yellow;
+      padding-right: 5px;
+      font-family: "Open Sans", sans-serif;
+      letter-spacing: 3px;
+    }
+  }
 
+  li {
+    padding: 0.5em;
+    border-bottom: 1px solid $pinklight;
+    overflow: scroll;
+
+    &:hover {
+      transition: all 0.2s ease;
+      transform: scale(1.1);
+
+      a {
+        color: $yellow;
+      }
     }
 
-    li {
-        padding: 0.5em;
-        border-bottom: 1px solid $pinklight;
-        overflow: scroll;
-
-        &:hover {
-            transition: all 0.2s ease;
-            transform: scale(1.1);
-
-            a {
-                color: $yellow;
-            }
-        }
-
-        &.list-title--new:hover {
-            background-color: $darkteal;
-            transform: none;
-        }
-
+    &.list-title--new:hover {
+      background-color: $darkteal;
+      transform: none;
     }
 
+    @media (max-width: 600px) {
+      padding: 0;
+    }
+  }
 }
