--- a/public/sass/_list.scss
+++ b/public/sass/_list.scss
@@ -1,282 +1,284 @@
 .list-container {
-    background-color: $yellow;
-    min-height: calc(100vh - 1.5em);
-    color: $pink;
-    padding-bottom: 1.5em;
+  background-color: $yellow;
+  min-height: calc(100vh - 1.5em);
+  color: $pink;
+  padding-bottom: 1.5em;
 
-    @media (max-width: 825px) {
-        max-width: initial;
-        min-height: calc(100vh - 8em);
+  @media (max-width: 825px) {
+    max-width: initial;
+    min-height: calc(100vh - 8em);
+  }
+
+  .title-container {
+    display: flex;
+    justify-content: space-between;
+    background-color: $pink;
+
+    .edit-icons-container {
+      background-color: $pink;
+      display: flex;
+      justify-content: space-evenly;
+      flex-direction: column;
+      padding: 0.5em;
+
+      @media (max-width: 825px) {
+        padding: 0.25em;
+      }
     }
+  }
 
-    .title-container {
-
-        display: flex;
-        justify-content: space-between;
-        background-color: $pink;
-
-
-        .edit-icons-container {
-            display: flex;
-            justify-content: space-evenly;
-            flex-direction: column;
-            padding: 2em;
-
-        }
-    }
-
-    .list-title {
-        font-size: 2.5rem;
-        color: $yellow;
-        text-shadow: 2px 2px 0 $darkteal;
-        padding: 0.5em;
-        overflow: hidden;
-
-        &::before {
-            content: "//";
-            color: $darkteal;
-            padding-right: 5px;
-            text-shadow: none;
-            font-family: "Open Sans", sans-serif;
-            letter-spacing: 3px;
-        }
-
-        &::selection {
-            background-color: $yellow;
-            color: $darkteal;
-            text-shadow: 2px 2px 0 $pink;
-        }
-    }
-
-    .title-icon {
-        color: $yellow;
-        font-size: 1rem;
-
-        &:hover {
-            color: $darkteal;
-            text-shadow: 2px 2px 0 $yellow;
-            cursor: pointer;
-        }
-    }
-
-    .icon-link {
-        display: inline;
-    }
-
-}
-
-.list-title--edit-heading {
-    background-color: $darkteallight;
+  .list-title {
     font-size: 2.5rem;
     color: $yellow;
     text-shadow: 2px 2px 0 $darkteal;
-    padding: 0;
-    overflow: hidden;
-    display: none;
+    padding: 0.5em;
+    // overflow: hidden;
+
+    &::before {
+      content: "//";
+      color: $darkteal;
+      padding-right: 5px;
+      text-shadow: none;
+      font-family: "Open Sans", sans-serif;
+      letter-spacing: 3px;
+    }
+
+    &::selection {
+      background-color: $yellow;
+      color: $darkteal;
+      text-shadow: 2px 2px 0 $pink;
+    }
+  }
+
+  .title-icon {
+    color: $yellow;
+    font-size: 1rem;
+    margin: 0.5em;
+
+    &:hover {
+      color: $darkteal;
+      text-shadow: 2px 2px 0 $yellow;
+      cursor: pointer;
+    }
+  }
+
+  .icon-link {
+    display: inline;
+  }
+}
+
+.list-title--edit-heading {
+  background-color: $darkteallight;
+  font-size: 2.5rem;
+  color: $yellow;
+  text-shadow: 2px 2px 0 $darkteal;
+  padding: 0;
+  overflow: hidden;
+  display: none;
 }
 
 .list-title--edit {
-    @extend .list-title;
-    font-family: 'Titillium Web', sans-serif;
-    font-weight: bold;
-    border: none;
-    outline: none;
-    padding: 0;
-    display: none;
-    background-color: $pinkedit;
+  @extend .list-title;
+  font-family: "Titillium Web", sans-serif;
+  font-weight: bold;
+  border: none;
+  outline: none;
+  padding: 0;
+  display: none;
+  background-color: $pinkedit;
 
-    &:focus {
-        &::selection {
-            background-color: $pinkedit;
-            color: $yellow;
-            text-shadow: 2px 2px 0 $yellow;
-        }
+  &:focus {
+    &::selection {
+      background-color: $pinkedit;
+      color: $yellow;
+      text-shadow: 2px 2px 0 $yellow;
     }
+  }
 }
 
 .list-title--static {
-    max-width: calc(70vw - 5em);
+  max-width: calc(70vw - 5em);
 
-    @media (max-width: 825px) {
-        max-width: calc(100vw - 3.5em);
-    }
+  @media (max-width: 825px) {
+    max-width: calc(100vw - 3.5em);
+  }
 }
 
 .show-completed {
-    @extend .created;
-    left: 1em
+  @extend .created;
+  left: 1em;
 }
 
 .list {
+  color: $darkteal;
+  grid-area: list;
+  list-style: none;
+  padding: 0.5em 1em;
+  font-size: 1.5rem;
+
+  li {
+    display: inline;
+  }
+
+  input {
+    outline: none;
+    border: none;
+    background-color: #e9e6c9;
     color: $darkteal;
-    grid-area: list;
-    list-style: none;
-    padding: 0.5em 1em;
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 200;
     font-size: 1.5rem;
+    width: calc(100% - 3em);
+    padding-left: 0.5em;
+    overflow-x: scroll;
 
-    li {
-        display: inline;
+    &:focus {
+      color: $pink;
+      background-color: $darktealverylight;
     }
 
-    input {
-        outline: none;
-        border: none;
-        background-color: #e9e6c9;
-        color: $darkteal;
-        font-family: 'Titillium Web', sans-serif;
-        font-weight: 200;
-        font-size: 1.5rem;
-        width: calc(100% - 3em);
-        padding-left: 0.5em;
-        overflow-x: scroll;
-
-        &:focus {
-            color: $pink;
-            background-color: $darktealverylight;
-        }
-
-        &.complete {
-            text-decoration: line-through;
-        }
+    &.complete {
+      text-decoration: line-through;
     }
+
+    @media (max-width: 825px) {
+      font-size: 1.25rem;
+    }
+  }
 }
 
 .new-item {
-    @extend .list;
+  @extend .list;
 }
 
 .checkbox {
-    position: absolute;
-    height: 20px;
-    width: 20px;
-    top: 15px;
-    left: 0;
-    background-color: $pink;
-    border-radius: 2px;
+  position: absolute;
+  height: 20px;
+  width: 20px;
+  top: 15px;
+  left: 0;
+  background-color: $pink;
+  border-radius: 2px;
+  border: none;
+
+  &--add {
+    height: 40px;
+    width: 40px;
+    color: $yellow;
+    font-size: 2rem;
     border: none;
+    margin-left: 0.5em;
+  }
 
-    &--add {
-        height: 40px;
-        width: 40px;
-        color: $yellow;
-        font-size: 2rem;
-        border: none;
-        margin-left: 0.5em;
-    }
+  &:hover {
+    background-color: $pinkedit;
+    cursor: pointer;
+  }
 
-    &:hover {
-        background-color: $pinkedit;
-        cursor: pointer
-    }
-
-    &:active {
-        outline: none;
-    }
-
+  &:active {
+    outline: none;
+  }
 }
 
 .tick {
-    color: $yellow
+  color: $yellow;
 }
 
 .list-item {
-    position: relative;
-    padding-left: 30px;
-    display: flex;
-    flex-direction: column;
-    height: 2em;
+  position: relative;
+  padding-left: 30px;
+  display: flex;
+  flex-direction: column;
+  height: 2em;
 
-    &--new {
-        @extend .list-item;
-        flex-direction: row;
-        border-bottom: 3px solid $pink;
-        padding-left: 0;
-        height: 3em;
+  &--new {
+    @extend .list-item;
+    flex-direction: row;
+    border-bottom: 3px solid $pink;
+    padding-left: 0;
+    height: 3em;
 
-        input {
-            color: $pink;
-            padding-left: 3em;
+    input {
+      color: $pink;
+      padding-left: 3em;
 
-            &::placeholder {
-                color: $grey;
-            }
-
-        }
+      &::placeholder {
+        color: $grey;
+      }
     }
+  }
 }
 
 .subtask {
-    left: 30px;
-    display: flex;
-    width: calc(100% - 2.5em);
+  left: 30px;
+  display: flex;
+  width: calc(100% - 2.5em);
 
-    input {
-        color: $darkteallight;
+  input {
+    color: $darkteallight;
+  }
+
+  .checkbox {
+    background-color: $darkteal;
+
+    &:hover {
+      background-color: $darkteallight;
+      cursor: pointer;
     }
+  }
 
-    .checkbox {
-        background-color: $darkteal;
-
-        &:hover {
-            background-color: $darkteallight;
-            cursor: pointer
-        }
-    }
-
-    &-new {
-        display: none;
-        margin-left: 30px;
-        width: calc(100% - 5em);
-    }
-
-
+  &-new {
+    display: none;
+    margin-left: 30px;
+    width: calc(100% - 5em);
+  }
 }
 
 .subtask-button,
 .delete-item-button {
-    background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0);
+  color: $darkteallight;
+  border: none;
+  font-size: 1.4rem;
+  position: absolute;
+  height: 20px;
+  width: 20px;
+  top: calc(50% - 0.8rem);
+  right: 0;
+
+  &:hover {
+    color: $darkteal;
+    cursor: pointer;
+  }
+
+  a {
     color: $darkteallight;
-    border: none;
-    font-size: 1.4rem;
-    position: absolute;
-    height: 20px;
-    width: 20px;
-    top: calc(50% - 0.8rem);
-    right: 0;
 
     &:hover {
-        color: $darkteal;
-        cursor: pointer
+      color: $darkteal;
     }
-
-    a {
-        color: $darkteallight;
-
-        &:hover {
-            color: $darkteal;
-        }
-    }
+  }
 }
 
 .item-collection {
-    border-bottom: 1px solid $darktealverylight;
+  border-bottom: 1px solid $darktealverylight;
 }
 
 .created {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    padding: 0.25em 0.5em;
-    text-align: right;
-    color: $pink;
-    font-size: 0.75rem;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 0.25em 0.5em;
+  text-align: right;
+  color: $pink;
+  font-size: 0.75rem;
 }
 
 input.new-list {
-    background-color: $darkteal;
-    color: $yellow;
+  background-color: $darkteal;
+  color: $yellow;
 
-    &:focus {
-        color: $yellow;
-    }
+  &:focus {
+    color: $yellow;
+  }
 }
