--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -5,7 +5,8 @@ $pink: rgb(188, 72, 115);
 $pinklight: rgba(188, 72, 115, 0.5);
 $yellow: rgb(233, 230, 201);
 $grey: rgb(122, 122, 122);
-$pinkedit: rgb(190, 123, 147); // $purple: #472b62;
+$pinkedit: rgb(190, 123, 147);
+// $purple: #472b62;
 // $teal: rgb(0, 135, 177);
 // $coral: rgb(253, 152, 152);
 // $orange: #fb5b5a;
