--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,7 @@
 }
 
 body {
+  background-color: #003f5c;
   font-family: "Titillium Web", sans-serif;
   font-weight: 200;
 }
@@ -72,6 +73,11 @@ a:hover {
     font-size: 2rem;
     letter-spacing: 10px;
     margin-right: 7em;
+  }
+}
+@media (max-width: 600px) {
+  .logo-container {
+    margin-right: 0;
   }
 }
 
@@ -162,6 +168,11 @@ nav {
   background-color: #003f5c;
   transform: none;
 }
+@media (max-width: 600px) {
+  .nav-list li {
+    padding: 0;
+  }
+}
 
 .list-container {
   background-color: #e9e6c9;
@@ -181,17 +192,22 @@ nav {
   background-color: #bc4873;
 }
 .list-container .title-container .edit-icons-container {
+  background-color: #bc4873;
   display: flex;
   justify-content: space-evenly;
   flex-direction: column;
-  padding: 2em;
+  padding: 0.5em;
+}
+@media (max-width: 825px) {
+  .list-container .title-container .edit-icons-container {
+    padding: 0.25em;
+  }
 }
 .list-container .list-title, .list-container .list-title--edit {
   font-size: 2.5rem;
   color: #e9e6c9;
   text-shadow: 2px 2px 0 #003f5c;
   padding: 0.5em;
-  overflow: hidden;
 }
 .list-container .list-title::before, .list-container .list-title--edit::before {
   content: "//";
@@ -209,6 +225,7 @@ nav {
 .list-container .title-icon {
   color: #e9e6c9;
   font-size: 1rem;
+  margin: 0.5em;
 }
 .list-container .title-icon:hover {
   color: #003f5c;
@@ -285,6 +302,11 @@ nav {
 }
 .list input.complete, .new-item input.complete {
   text-decoration: line-through;
+}
+@media (max-width: 825px) {
+  .list input, .new-item input {
+    font-size: 1.25rem;
+  }
 }
 
 .checkbox {
